Update admin password note in .env.example
Added a note to avoid using 'admin' as the admin password due to project issues.

--- a/API/.env.example
+++ b/API/.env.example
@@ -1,7 +1,7 @@
 TZ="Asia/Calcutta" # Timezone
 FEATHERS_AUTH_SECRET="" # Custom secret for feathers authentication and JWT generation
 MONGO_CONN="" # MongoDB connection string
-ADMIN_PASSWORD="" # Password for the admin user of web dashboard
+ADMIN_PASSWORD="" # Password for the admin user of web dashboard. (Do not set this to 'admin', the project has some issues with that.)
 UPLOAD_KEY="" # Key used in the expo publish custom script
 NODE_ENV=""
 PUBLIC_URL="" # Public URL for the server
