--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orion-expo-updates-server",
+  "name": "k12-expo-updates-server",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
